--- a/src/main/resources/APachas/src/index.html
+++ b/src/main/resources/APachas/src/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <script
+  <!--<script
           src="https://www.paypal.com/sdk/js?client-id=ATf1-QPk20tqgmCXMEH_rTkdpYDJjOoUSHsoP4ROOevzgsYVLnvurgPeAGh8PAynWpSe0NKJiTolOThs&currency=EUR&commit=true">
-  </script>
+  </script>-->
 </head>
 <body class="body">
   <app-root></app-root>
